update: fixed the intro section animation blur and cropping issue, updated fingerprint animation but keeping it disabled for now

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,3 +35,6 @@ body {
 .white-gradient {
   background: linear-gradient(90deg, #cacaca 0%, #e9e9e9 40.87%, #d3d3d3 100%);
 }
+#blur-circle-3{
+  backdrop-filter: blur(17.5px);
+}
